# plaid-statement-fetcher

./: .dockerignore  .gitignore  Dockerfile  README.md  REQUIREMENTS.md  package-lock.json  pyproject.toml
.github/workflows/: docker-build.yml  lint.yml  pr-validation.yml  publish-artifacts.yml  release.yml
frontend/: .dockerignore  .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  main.jsx
frontend/src/components/: EventLogTable.jsx
frontend/src/pages/: AccountDetailsPage.jsx  HomePage.jsx  ServiceConfigPage.jsx  SyncProgressPage.jsx
k8s/base/: configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  secret.example.yaml  service.yaml
k8s/base/backend/: configmap.yaml  deployment.yaml  kustomization.yaml  pvc.yaml  secret.example.yaml  service.yaml
k8s/base/frontend/: deployment.yaml  kustomization.yaml  service.yaml
k8s/examples/http-reference/: kustomization.yaml
src/statement_fetcher/: __init__.py  app.py  cli.py  crypto.py  models.py  plaid_api.py  settings.py  storage.py  sync.py
tests/: test_app_link_flow.py  test_cli_settings.py  test_plaid_api.py  test_storage.py  test_sync.py
